--- a/src/app/pages/estudos/estudos.component.scss
+++ b/src/app/pages/estudos/estudos.component.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
-  position: absolute;
+  // position: absolute;
+  margin-bottom: 100px;
 }
 
 .info{
@@ -45,6 +46,7 @@
     height: 100%;
     width: 70%;
     // border-radius: 10px;
+
   }
 
 }
