--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
 <div class="router-outlet">
   <router-outlet></router-outlet>
 </div>
+<div class="rodape">
+  <app-rodape></app-rodape>
+</div>
 <!-- <div class="router-outlet"></div> -->
 <!-- <router-outlet></router-outlet> -->
