--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,13 @@
 .router-outlet{
   margin-top: 80px;
 }
+
+.rodape{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  margin-bottom: 30px;
+
+}
