--- a/src/app/engine/book/book.component.scss
+++ b/src/app/engine/book/book.component.scss
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 150px;
-  border: 3px solid #b35340;
+  height: 170px;
+  border-top: 3px solid #b35340;
+  border-bottom: 3px solid #b35340;
   background-color: #233342;
   border-radius: 10px;
 
@@ -24,11 +25,12 @@
         flex-direction: column;
         width: 100px;
         height: 100px;
-        margin-top: 5px;
-        margin-left: 5px;
+        margin-top: 20px;
+        margin-left: 20px;
         margin-right: 5px;
         border-radius: 8px;
-        border: 2px solid #b35340;
+        border-top: 3px solid #b35340;
+        border-left: 3px solid #b35340;
       }
     }
   }
@@ -48,6 +50,7 @@
       font-family: 'Roboto';
       font-weight: 600;
       color: #b35340;
+      margin-top: 20px;
     }
 
     .description{
