--- a/src/app/pages/books-category-estudos/books-category-estudos.component.scss
+++ b/src/app/pages/books-category-estudos/books-category-estudos.component.scss
@@ -23,19 +23,21 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-     align-items: center;
-     align-self: center;
-     align-content: center;
-     justify-content: center;
-     place-content: center;
-     place-items: center;
-     place-self: center;
+    //  align-items: center;
+    //  align-self: center;
+    //  align-content: center;
+    //  justify-content: center;
+
 
     .prateleira-livros{
       display: grid;
-      grid-template-columns: 50% 50%;
+      grid-template-columns:75%;
       width: 100%;
       height: 100%;
+      justify-content: center;
+      // place-content: center;
+      // place-items: center;
+      // place-self: center;
 
       .book-item{
         margin: 10px;
