--- a/src/app/pages/programacoes/programacoes.component.scss
+++ b/src/app/pages/programacoes/programacoes.component.scss
@@ -1,5 +1,248 @@
-.mapa-igreja{
-  width: 450px;
-  height: 250px;
-  border: 0px;
+:host{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  // position: absolute;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+
+}
+
+.line-sub{
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  height: 5px;
+  background-color: #4051b3;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  margin: auto;
+  position: relative;
+  top: -22px;
+
+}
+
+.body-content{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  .titulo{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    align-self: center;
+    margin-top: 20px;
+    font-size: 30px;
+    font-family: 'Playfair Display SC';
+    color: #4051b3;
+    margin-bottom: 25px;
+  }
+
+  .box-area{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 300px;
+    margin-top: 50px;
+
+    .box{
+      display: flex;
+      flex-direction: column;
+      width: 50%;
+      height: 100%;
+      background-color: #4b2b31;
+      border-top: 3px solid #ce8054;
+      border-right: 3px solid #ce8054;
+      border-bottom: 3px solid #ce8054;
+
+
+      .texto-body{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        font-size: 18px;
+        font-family: 'Roboto';
+        align-items: flex-start;
+        align-self: flex-start;
+        color: #ce8054;
+        margin-top: 15px;
+        margin-left: 30px;
+
+      }
+
+    }
+
+  }
+
+  .box-area-right{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 300px;
+    margin-top: 50px;
+
+
+    .box{
+      display: flex;
+      flex-direction: column;
+      width: 50%;
+      height: 100%;
+      background-color: #4b2b31;
+      border-top: 3px solid #ce8054;
+      border-left: 3px solid #ce8054;
+      border-bottom: 3px solid #ce8054;
+      border-right: 3px solid #ce8054;
+      align-items: center;
+      align-self: center;
+      align-content: center;
+      justify-content: center;
+
+      .outras-progamacoes{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        align-items: flex-start;
+        align-self: flex-start;
+        align-content: flex-start;
+        justify-content: flex-start;
+        font-size: 18px;
+        font-family: 'Roboto';
+        color: #ce8054;
+        margin-left: 30px;
+        // margin-top: 10px;
+
+      }
+
+      .margin-top{
+        margin-top: 20px;
+      }
+    }
+  }
+
+  .margin-empty{
+    margin-bottom: 50px;
+  }
+
+  .programacoes{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    align-self: center;
+
+    .title{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      font-size: 26px;
+      font-family: 'Playfair Display SC';
+      align-items: center;
+      align-self: center;
+      color: #4b2b31;
+      margin-bottom: 30px;
+    }
+
+    .texto{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      font-size: 26px;
+      font-family: 'Roboto';
+      align-items: center;
+      align-self: center;
+      color: #4b2b31;
+      margin-bottom: 15px;
+    }
+
+  }
+
+}
+
+.redes-sociais{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  align-self: center;
+  align-content: center;
+  justify-content: center;
+
+  a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    justify-content: center;
+    text-decoration: none;
+    margin-right: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 15px;
+    font-size: 14px;
+    color: #4b2b31;
+    font-family: 'Playfair Display SC';
+
+    .svg{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      align-self: center;
+      margin-top: 5px;
+      width: 50px;
+      height: 50px;
+    }
+
+    .icon-youtube{
+      width: 150px;
+      height: 50px;
+    }
+
+    .icon-instagram{
+      fill: rgb(128, 0, 128);
+    }
+
+  }
+}
+
+.mapa{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  padding-bottom: 100px;
+
+  .title{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    font-size: 26px;
+    font-family: 'Playfair Display SC';
+    align-items: center;
+    align-self: center;
+    color: #4b2b31;
+    margin-bottom: 25px;
+  }
+
+  .mapa-igreja{
+    width: 450px;
+    height: 250px;
+    border: 0px;
+  }
 }
